--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -270,7 +270,7 @@
 		\subsubsection{Ο Διαχειριστής Πακέτων του Node (Node Package Manager ,NPM)}
 		
 
-		Ο διαχειριστής πακέτων του Node (Node Package Manager ή NPM) παρέχει την δυνατότητα να κατεβάσουμε, να εγκαταστήσουμε και να τρέξουμς στην εφαρμογή μας πακέτα (modules) τρίτων. H εγκατάσταση του διαχειριστή  πακέτων πραγματοποιείται  αυτόματα όταν εγκαθιστούμε την πλατφόρμα του NodeJs. Μετά την εγκατάσταση του NodeJs, έχουμε πρόσβαση σε κάποια ενσωματωμένα πακέτα , τα οποία μας παρέχουν κάποιες διεπαφές εφαρμογών χαμηλού επιπέδου (low-level APIs) ώστε να μπορούμε να υλοποιήσουμε κάποιες βασικές λειτουργίες που χρειάζονται οι εφαρμογές. Αυτά τα πακέτα ονομάζονται ως ο πυρήνας του NodeJs . Στα πλαίσια σύνθετων εφαρμογών είναι σχεδόν απαραίτητο να συμπεριλάβουμε πακέτα τρίτων.
+		Ο διαχειριστής πακέτων του Node (Node Package Manager ή NPM) παρέχει την δυνατότητα να κατεβάσουμε, να εγκαταστήσουμε και να τρέξουμε στην εφαρμογή μας πακέτα (modules) τρίτων. H εγκατάσταση του διαχειριστή  πακέτων πραγματοποιείται  αυτόματα όταν εγκαθιστούμε την πλατφόρμα του NodeJs. Μετά την εγκατάσταση του NodeJs, έχουμε πρόσβαση σε κάποια ενσωματωμένα πακέτα , τα οποία μας παρέχουν κάποιες διεπαφές εφαρμογών χαμηλού επιπέδου (low-level APIs) ώστε να μπορούμε να υλοποιήσουμε κάποιες βασικές λειτουργίες που χρειάζονται οι εφαρμογές. Αυτά τα πακέτα ονομάζονται ως ο πυρήνας του NodeJs . Στα πλαίσια σύνθετων εφαρμογών είναι σχεδόν απαραίτητο να συμπεριλάβουμε πακέτα τρίτων.
 
 
 		Το σύνολο όλων των πακέτων που έχουν φτιάξει και δημοσιοποιήσει οι προγραμματιστές διατηρείται σε μία κεντρική αποθήκη από τον διαχειριστή πακέτων του NodeJs. Ο διαχειριστής πακέτων παρέχει ένα εργαλείο γραμμής-εντολών (command-line tool) όπου ο χρήστης μπορεί να εγκαθιστά και να διαχειρίζεται τα πακέτα αυτά. H αναζήτηση τέτοιων πακέτων μπορεί να πραγματοποιηθεί είτε  μέσω της γραμμής εντολών είτε μέσω της σελίδας www.npmjs.org. Σε αυτήν την σελίδα παρουσιάζονται και διάφορα στατιστικά στοιχεία, όπως πόσα πακέτα υπάρχουν συνολικά, από ποια πακέτα εξαρτώνται περισσότερο άλλα πακέτα κ.λ.π. \cite{cantelon}
@@ -484,8 +484,27 @@
 	
 		\subsubsection{Express Framework}
 
-		Το Express.js είναι ένα framework του Node.js, σχεδιασμένο για να χτίζει μίας σελίδας, πολλών σελίδων, και hybrid web εφαρμογές. Είναι το προκαθορισμένο framework που χρησιμοποιείται πάνω στο node.js.  Ο δημιουργός του TJ Holowaychuck το περιέγραψε ως ένα "Sinatra inspired server", πράγμα που σημαίνει ότι είναι σχετικά ελάχιστο, με πολλά χαρακτηριστικά διαθέσιμα ως πρόσθετα. Το express είναι το backend της στοίβας MEAN.
+
+		Express είναι ένα δρομολόγησης και middleware framework με ελάχιστη λειτουργικότητα από μόνο του. Μια Express εφαρμογή ουσιαστικά αποτελεί μία σειρά από middleware κλήσεις. Ο δημιουργός του Express framework, TJ Holowaychuck, το έχει περιγράψει ως "Sinatra Inspired Server",  που σημαίνει ότι είναι σχετικά ελάχιστο, αλλά παρέχει πολλά επιπλέον χαρακτηριστικά, τα οποία είναι διαθέσιμα ως πρόσθετα. 
 		
+Το middleware είναι μια συνάρτηση με πρόσβαση στο αντικείμενο της αίτησης (req), το αντικείμενο απάντηση (res), και το επόμενο middleware στον κύκλο αίτησης-απάντησης της εφαρμογής, που συνήθως συμβολίζεται με μια μεταβλητή με το όνομα next.
+
+Το middleware μπορεί να:
+
+\begin{itemize}
+
+\item Εκτελέσει οποιοδήποτε κώδικα.
+\item Να κάνει αλλαγές στην αντικείμενα αίτησης και απάντησης (request and response objects).
+\item Να τερματίζει τον κύκλο αίτησης-απάντησης.
+\item Να καλεί το επόμενο middleware της στοίβας.
+\item Εάν το τρέχον middleware δεν τελειώσει τον κύκλο αίτησης-απάντησης, θα πρέπει να κληθεί το επόμενο, next(), για να περάσει ο έλεγχος στο επόμενο middleware, διαφορετικά η αίτηση θα μείνει ξεκρέμαστη.
+
+\end{itemize}
+
+
+Μία εφαρμογή Express μπορεί να χρησιμοποιήσει τα ακόλουθα είδη middleware: middleware επιπέδου εφαρμογής (application-level middleware),middleware επιπέδου δρομολόγησης, middleware χειρισμού σφαλμάτων(error-handling middleware), ενσωματωμένο middleware (built-in middleware), middleware τρίτων κατασκευαστών middleware (third-party middleware). 
+
+
 		\subsubsection{Angular}
 		Το AngularJS είναι ένα από τα πιο δημοφιλή ανοιχτού κώδικα JavaScript framework που χρησιμοποιείται για την κατασκευή και τη δομή σύγχρονων διαδικτυακών εφαρμογών, κυρίως εφαρμογών μίας σελίδας. Αναπτύχθηκε από την Google και από μία κοινότητα προγραμματιστών για την αντιμετώπιση των πολλών προκλήσεων που ανέκυψαν κατά την ανάπτυξη των εφαρμογών μίας σελίδας.  Στόχος του είναι να απλοποιήσει τόσο την ανάπτυξη όσο και το testing αυτών των εφαρμογών, παρέχοντας ένα framework για client-side model-View-Controller (MVC) και το model-view-viewmodel (MVVM) αρχιτεκτονικές, μαζί με τα συστατικά που χρησιμοποιούνται συνήθως στις εφαρμογές Διαδικτύου.
 	   \\*
